# komodo-wallet-desktop

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  FALLBACK_README.md  README.md  atomic.dex.desktop.cpp  conanfile.txt  docker-build-linux.sh  docker-compose.yaml  main.cpp  qml.qrc  qtquickcontrols2.conf  vcpkg.json  version.json
atomic_dex_qt/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
atomic_qt/: .clang-tidy  .gitignore  CMakeLists.txt  atomic_qt_en_US.ts  main.cpp  qml.qrc
atomic_qt/assets/config/: cfg.json  coins.json
atomic_qt/atomicQtDesign/: DefaultText.qml  atomicQtDesign.qml  atomicQtDesign.qmlproject
atomic_qt/atomicQtDesign/qml/: Window.ui.qml  main.qml
atomic_qt/atomic_qt_design/: qtquickcontrols2.conf  translations.ts
atomic_qt/atomic_qt_design/qml/: App.qml  App.ui.qml  NoConnection.qml  SettingsModal.qml  main.qml
atomic_qt/ci_tools_atomic_dex/: README.md  ci_tools_atomic_dex.nimble
atomic_qt/ci_tools_atomic_dex/src/: build.nim  bundle.nim  ci_tools_atomic_dex.nim  dependencies.nim  generate.nim  vcpkg.nim
atomic_qt/src/: atomic.dex.app.cpp  atomic.dex.app.hpp  atomic.dex.cfg.cpp  atomic.dex.cfg.hpp  atomic.dex.coins.config.cpp  atomic.dex.coins.config.hpp  atomic.dex.events.hpp  atomic.dex.kill.cpp  atomic.dex.mm2.api.cpp  atomic.dex.mm2.api.hpp  atomic.dex.mm2.config.hpp  atomic.dex.mm2.cpp  atomic.dex.mm2.error.code.cpp  atomic.dex.mm2.error.code.hpp  atomic.dex.mm2.hpp  atomic.dex.pch.hpp  atomic.dex.provider.coinpaprika.api.cpp  atomic.dex.provider.coinpaprika.api.hpp  atomic.dex.provider.coinpaprika.cpp  atomic.dex.provider.coinpaprika.hpp  atomic.dex.qt.bindings.cpp  atomic.dex.qt.bindings.hpp  atomic.dex.qt.current.coin.infos.cpp  atomic.dex.qt.current.coin.infos.hpp  atomic.dex.security.hpp  atomic.dex.utilities.hpp  atomic.dex.version.hpp
atomic_qt/src/osx/: atomic.dex.osx.manager.hpp  atomic.dex.osx.manager.mm
src/: CMakeLists.txt  atomic.dex.app.cpp  atomic.dex.app.hpp  atomic.dex.band.oracle.price.service.cpp  atomic.dex.band.oracle.price.service.hpp  atomic.dex.cfg.cpp  atomic.dex.cfg.hpp  atomic.dex.coins.config.cpp  atomic.dex.coins.config.hpp  atomic.dex.cpprestsdk.utilities.cpp  atomic.dex.cpprestsdk.utilities.hpp  atomic.dex.events.hpp  atomic.dex.global.price.service.cpp  atomic.dex.global.price.service.hpp  atomic.dex.gui.cpp  atomic.dex.gui.hpp  atomic.dex.gui.style.cpp  atomic.dex.gui.style.hpp  atomic.dex.gui.v2.cpp  atomic.dex.gui.v2.credentials.view.cpp  atomic.dex.gui.v2.hpp  atomic.dex.gui.v2.portfolio.view.cpp  atomic.dex.gui.v2.trading.view.cpp  atomic.dex.gui.v2.waiting.view.cpp  atomic.dex.gui.widgets.cpp  atomic.dex.gui.widgets.hpp  atomic.dex.http.code.hpp  atomic.dex.kill.hpp  atomic.dex.ma.series.data.hpp  atomic.dex.mm2.api.cpp  atomic.dex.mm2.api.hpp  atomic.dex.mm2.config.hpp  atomic.dex.mm2.cpp  atomic.dex.mm2.error.code.cpp  atomic.dex.mm2.error.code.hpp  atomic.dex.mm2.hpp  atomic.dex.notification.manager.cpp  atomic.dex.notification.manager.hpp  atomic.dex.pch.hpp  atomic.dex.provider.cex.prices.api.cpp  (+87 more)
src/app/: app.cpp  app.hpp  main.cpp  main.prerequisites.hpp
src/atomicdex/: app.cpp  app.entry.cpp  app.entry.hpp  app.hpp  main.prerequisites.hpp  pch.hpp
src/atomicdex/config/: addressbook.cfg.cpp  addressbook.cfg.hpp  app.cfg.cpp  app.cfg.hpp  coins.cfg.cpp  coins.cfg.hpp  electrum.cfg.cpp  electrum.cfg.hpp  mm2.cfg.hpp  raw.mm2.coins.cfg.hpp  wallet.cfg.cpp  wallet.cfg.hpp
src/atomicdex/constants/: http.code.hpp  mm2.constants.hpp  mm2.error.code.cpp  mm2.error.code.hpp  qt.actions.hpp  qt.coins.enums.cpp  qt.coins.enums.hpp  qt.trading.enums.cpp  qt.trading.enums.hpp
src/atomicdex/events/: events.hpp  qt.events.hpp
src/atomicdex/managers/: addressbook.manager.cpp  addressbook.manager.hpp  notification.manager.cpp  notification.manager.hpp  qt.wallet.manager.cpp  qt.wallet.manager.hpp
src/atomicdex/models/: qt.addressbook.contact.addresses.model.cpp  qt.addressbook.contact.addresses.model.hpp  qt.addressbook.contact.model.cpp  qt.addressbook.contact.model.hpp  qt.addressbook.contact.proxy.filter.model.cpp  qt.addressbook.contact.proxy.filter.model.hpp  qt.addressbook.model.cpp  qt.addressbook.model.hpp  qt.addressbook.proxy.filter.model.cpp  qt.addressbook.proxy.filter.model.hpp  qt.candlestick.charts.model.cpp  qt.candlestick.charts.model.hpp  qt.contact.model.cpp  qt.contact.model.hpp  qt.global.coins.cfg.model.cpp  qt.global.coins.cfg.model.hpp  qt.global.coins.cfg.proxy.filter.model.cpp  qt.global.coins.cfg.proxy.filter.model.hpp  qt.orderbook.model.cpp  qt.orderbook.model.hpp  qt.orderbook.proxy.model.cpp  qt.orderbook.proxy.model.hpp  qt.orders.model.cpp  qt.orders.model.hpp  qt.orders.proxy.model.cpp  qt.orders.proxy.model.hpp  qt.portfolio.model.cpp  qt.portfolio.model.hpp  qt.portfolio.proxy.filter.model.cpp  qt.portfolio.proxy.filter.model.hpp  qt.wallet.transactions.model.cpp  qt.wallet.transactions.model.hpp  qt.wallet.transactions.proxy.filter.model.cpp  qt.wallet.transactions.proxy.filter.model.hpp
src/atomicdex/pages/: qt.addressbook.page.cpp  qt.addressbook.page.hpp  qt.portfolio.page.cpp  qt.portfolio.page.hpp  qt.settings.page.cpp  qt.settings.page.hpp  qt.trading.page.cpp  qt.trading.page.hpp  qt.wallet.page.cpp  qt.wallet.page.hpp
src/atomicdex/tests/: atomic.dex.provider.cex.prices.api.tests.cpp  atomic.dex.provider.cex.prices.tests.cpp  atomic.dex.qt.utilities.tests.cpp  atomic.dex.tests.cpp  atomic.dex.tests.hpp  atomic.dex.utilities.tests.cpp  atomic.dex.wallet.config.tests.cpp
src/atomicdex/utilities/: cpprestsdk.utilities.cpp  cpprestsdk.utilities.hpp  fs.prerequisites.hpp  global.utilities.cpp  global.utilities.hpp  kill.cpp  kill.hpp  log.prerequisites.hpp  nlohmann.json.sax.private.cpp  (+7 more)
src/osx/: atomic.dex.osx.manager.hpp  atomic.dex.osx.manager.mm
src/tests/: atomic.dex.provider.cex.prices.api.tests.cpp  atomic.dex.provider.cex.prices.tests.cpp  atomic.dex.qt.utilities.tests.cpp  atomic.dex.tests.cpp  atomic.dex.tests.hpp  atomic.dex.wallet.config.tests.cpp
(+1759 files in other folders)
